ansible/roles/longhorn/files/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-frontend-server
  namespace: longhorn-system
spec:
  ingressClassName: traefik
  rules:
  - host: longhorn.home.beabys.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
